Alpha sort config keys, sort stats by category, and style changes

--- a/app/templates/components/table/bucket-props-advanced.hbs
+++ b/app/templates/components/table/bucket-props-advanced.hbs
@@ -6,6 +6,6 @@
       {{key}}
       {{tooltip.bucket-props itemKey=key}}
     </td>
-    <td class='value'>{{value}}</td>
+    <td class='value'><code>{{value}}</code></td>
   </tr>
 {{/each-in}}
