--- a/app/templates/components/table/bucket-types.hbs
+++ b/app/templates/components/table/bucket-types.hbs
@@ -16,10 +16,10 @@
       {{bt.objectType}}
     </td>
     <td>
-      {{bt.nVal}}
+      <code>{{bt.nVal}}</code>
     </td>
     <td>
-      {{bt.resolutionStrategy}}
+      <code>{{bt.resolutionStrategy}}</code>
     </td>
   </tr>
 {{/each}}
