--- a/app/templates/components/table/object-headers.hbs
+++ b/app/templates/components/table/object-headers.hbs
@@ -2,7 +2,7 @@
 {{#each headers as |header|}}
   <tr>
     <td class="key">{{header.key}}</td>
-    <td class="value">{{header.value}}</td>
+    <td class="value"><code>{{header.value}}</code></td>
   </tr>
 {{/each}}
 </tbody>
