--- a/app/templates/components/table/object-version.hbs
+++ b/app/templates/components/table/object-version.hbs
@@ -5,10 +5,10 @@
 </tr>
 <tr>
   <td class="key">Etag:</td>
-  <td class="value">{{object.etag}}</td>
+  <td class="value"><code>{{object.etag}}</code></td>
 </tr>
 <tr>
   <td class="key">Causal Context:</td>
-  <td class="value">{{object.causalContext}}</td>
+  <td class="value"><code>{{object.causalContext}}</code></td>
 </tr>
 </tbody>
