--- a/app/templates/components/table/search-indexes.hbs
+++ b/app/templates/components/table/search-indexes.hbs
@@ -14,7 +14,7 @@
         {{index.schema.name}}
       {{/link-to}}
     </td>
-    <td>{{index.nVal}}</td>
+    <td><code>{{index.nVal}}</code></td>
   </tr>
 {{else}}
   No indexes found.
