Create bucket types available through UI

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -35,4 +35,5 @@
 @import "components/tooltip";
 // View specific styling
 @import "views/object-counter-container";
+@import "views/bucket-type-create-container";
 
