--- a/app/templates/components/button/object-view-raw.hbs
+++ b/app/templates/components/button/object-view-raw.hbs
@@ -1,5 +1,4 @@
 <a href="{{object.rawUrl}}" class="btn btn-sm btn-primary">
-    <span class="glyphicon glyphicon-download"
-          aria-hidden="true"></span>
+  <span class="ion-eye" aria-hidden="true"></span>
   View raw
 </a>
