--- a/app/templates/components/map-object/map.hbs
+++ b/app/templates/components/map-object/map.hbs
@@ -4,10 +4,10 @@
     <span class="expand-contents">
     <code {{action 'subMapToggle'}}>
       {{#if showContent}}
-        <span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
+        <span class="ion-ios-minus" aria-hidden="true"></span>
         <span class="toggle-text">hide contents</span>
       {{else}}
-        <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+        <span class="ion-ios-plus" aria-hidden="true"></span>
         <span class="toggle-text">view contents</span>
       {{/if}}
     </code>
