--- a/app/templates/components/button/delete-object.hbs
+++ b/app/templates/components/button/delete-object.hbs
@@ -1,5 +1,5 @@
 <button type="button" class="btn btn-sm btn-danger"
   {{action 'deleteObject' object}}>
-  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+  <span class="ion-trash-a" aria-hidden="true"></span>
   Delete
 </button>
