--- a/app/templates/components/button/refresh-buckets.hbs
+++ b/app/templates/components/button/refresh-buckets.hbs
@@ -1,4 +1,4 @@
 <button type="button" class="btn btn-xs btn-primary" {{action 'refreshBuckets' bucketType}}>
-  <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+  <span class="ion-refresh" aria-hidden="true"></span>
   Refresh Bucket Cache
 </button>
