--- a/app/templates/components/button/refresh-keys.hbs
+++ b/app/templates/components/button/refresh-keys.hbs
@@ -1,5 +1,5 @@
 <button type="button" class="btn btn-xs btn-primary"
   {{action 'refreshKeys' bucket}}>
-  <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+  <span class="ion-refresh" aria-hidden="true"></span>
   Refresh Key Cache
 </button>
