--- a/app/templates/components/button/set-element-remove.hbs
+++ b/app/templates/components/button/set-element-remove.hbs
@@ -1,4 +1,4 @@
 <button type="button" class="btn btn-xs btn-danger"
   {{action 'removeElement' model item}}>
-  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+  <span class="ion-trash-a" aria-hidden="true"></span>
 </button>
