--- a/app/templates/components/map-object/section.hbs
+++ b/app/templates/components/map-object/section.hbs
@@ -11,12 +11,12 @@
         <code>{{value}}</code>
         {{#if removeField}}
           <button type="button" class="delete-button" {{action 'removeField' map name value}}>
-            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+            <span class="ion-trash-a" aria-hidden="true"></span>
           </button>
         {{/if}}
         {{#if editField}}
           <button type="button" class="edit-button" {{action 'editField' map name value}}>
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            <span class="ion-edit" aria-hidden="true"></span>
           </button>
         {{/if}}
       </td>
@@ -39,7 +39,7 @@
         placeholder="value"}}
 
         <button type="button" class="add-instance-button" {{action 'addField' map}}>
-          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+          <span class="ion-plus-round" aria-hidden="true"></span>
           Add {{title}}
         </button>
       </td>
