--- a/app/templates/partials/topbar.hbs
+++ b/app/templates/partials/topbar.hbs
@@ -6,7 +6,7 @@
   <ul class="topbar-nav">
     <li class="topbar-nav-item">
       {{#link-to 'help'}}
-        <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+        <span class="ion-help-circled" aria-hidden="true"></span>
         Help Section
       {{/link-to}}
     </li>
