Add responsive breakpoint and basic styling for smaller devices

--- a/app/styles/components/_breadcrumb-component.scss
+++ b/app/styles/components/_breadcrumb-component.scss
@@ -22,3 +22,10 @@
     }
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .view-label {
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
