--- a/app/styles/layout/_topbar-panel.scss
+++ b/app/styles/layout/_topbar-panel.scss
@@ -43,3 +43,24 @@
     }
   }
 }
+
+@media only screen and (max-width: 768px) {
+  $topbar-panel-height: 40px;
+
+  .topbar {
+    width: 100%;
+    height: $topbar-panel-height;
+
+    .logo {
+      margin: 5px;
+    }
+
+    .topbar-nav {
+      .topbar-nav-item {
+        a {
+          line-height: $topbar-panel-height;
+        }
+      }
+    }
+  }
+}
