--- a/app/styles/components/_view-label.scss
+++ b/app/styles/components/_view-label.scss
@@ -3,3 +3,10 @@
   font-size: 24px;
   font-weight: 500;
 }
+
+@media only screen and (max-width: 768px) {
+  .view-label {
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
