MDC replication cluster actions

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -33,7 +33,9 @@
 @import "components/object-content-list";
 @import "components/alerts";
 @import "components/tooltip";
+@import "components/ember-power-select";
 // View specific styling
 @import "views/object-counter-container";
 @import "views/bucket-type-create-container";
+@import "views/cluster-ops-container";
 
