--- a/app/templates/components/breadcrumb-component.hbs
+++ b/app/templates/components/breadcrumb-component.hbs
@@ -12,10 +12,6 @@
       </li>
     {{/if}}
 
-    {{#if data.bucketTypeCreate}}
-      <li>create bucket type</li>
-    {{/if}}
-
     {{#if data.bucket}}
       <li>
         {{link-to data.bucket.name 'bucket'
@@ -26,7 +22,21 @@
     {{/if}}
 
     {{#if data.riakObject}}
-      <li>{{data.riakObject.name}}</li>
+      <li>
+        {{link-to data.riakObject.name 'riak-object'
+        data.cluster.name
+        data.bucketType.name
+        data.bucket.name
+        data.riakObject.name}}
+      </li>
+    {{/if}}
+
+    {{#if data.bucketTypeCreate}}
+      <li>create bucket type</li>
+    {{/if}}
+
+    {{#if data.editView}}
+      <li>edit</li>
     {{/if}}
   {{/if}}
 
