Displaying basic table data in bucket-type view

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -34,6 +34,7 @@
 @import "components/alerts";
 @import "components/tooltip";
 @import "components/ember-power-select";
+@import "components/table";
 // View specific styling
 @import "views/cluster";
 @import "views/bucket-type";
