--- a/app/styles/components/_key-value-table.scss
+++ b/app/styles/components/_key-value-table.scss
@@ -2,10 +2,22 @@
   th, td {
     padding-bottom: 10px;
     vertical-align: top;
+  }
 
-    &.key {
-      font-weight: bold;
-      padding-right: 20px;
+  .key {
+    font-weight: bold;
+    padding-right: 20px;
+  }
+
+  &.bucket-props-overview {
+    .key {
+      min-width: 175px;
+    }
+  }
+
+  &.bucket-props-advanced {
+    .key {
+      min-width: 225px;
     }
   }
 }
