--- a/app/templates/bucket-type/time-series.hbs
+++ b/app/templates/bucket-type/time-series.hbs
@@ -1,1 +1,98 @@
-<h1>Time Series</h1>
+{{#if model.warnings}}
+  {{#bs-alert type="warning"}}
+    <ul>
+      <h4><span class="label label-warning">WARNINGS</span></h4>
+      {{#each model.warnings as |warning|}}
+        <li>{{warning}}</li>
+      {{/each}}
+    </ul>
+  {{/bs-alert}}
+{{/if}}
+
+<div class='bucket-types-container'>
+  {{#dashboard-module.container class='small-width'}}
+    {{#dashboard-module.header label='Bucket Type Properties'}}
+      <div class="module-actions">
+        {{#link-to 'bucket-type.edit' model.cluster.name model.name class='action-button edit'}}
+          <span class="ion-edit" aria-hidden="true"></span>
+          Edit Bucket Type
+        {{/link-to}}
+      </div>
+    {{/dashboard-module.header}}
+    {{#dashboard-module.body}}
+      {{#ivy-tabs as |tabs|}}
+        {{#tabs.tablist as |tablist|}}
+          {{#tablist.tab}}Overview{{/tablist.tab}}
+          {{#tablist.tab}}Advanced Properties{{/tablist.tab}}
+        {{/tabs.tablist}}
+
+        {{#tabs.tabpanel}}
+          {{table.bucket-props-overview model=model}}
+        {{/tabs.tabpanel}}
+
+        {{#tabs.tabpanel}}
+          {{table.bucket-props-advanced model=model}}
+        {{/tabs.tabpanel}}
+      {{/ivy-tabs}}
+    {{/dashboard-module.body}}
+  {{/dashboard-module.container}}
+
+  {{#dashboard-module.container class='small-width'}}
+    {{dashboard-module.header label='Table Information'}}
+    {{#dashboard-module.body}}
+      <div>
+        <label>Data Definition Langauge (DDL)</label>
+        {{#code-highlighter language-type='erlang'}}
+          {{model.props.ddl}}
+        {{/code-highlighter}}
+      </div>
+
+
+
+      {{!--{{#if model.isListLoaded}}--}}
+        {{!--{{#if model.bucketList}}--}}
+          {{!--<table class="key-value-table">--}}
+            {{!--<tbody>--}}
+            {{!--<tr>--}}
+              {{!--<td class="key">Bucket List Cache Created:</td>--}}
+              {{!--<td class="value">{{model.bucketList.created}}</td>--}}
+            {{!--</tr>--}}
+
+            {{!--<tr>--}}
+              {{!--<td class="key">Bucket List Cache</td>--}}
+              {{!--<td class="value">--}}
+                {{!--{{#if model.bucketList.count}}--}}
+                  {{!--{{#if model.bucketList.multipleListItems}}--}}
+                    {{!--<p>Displaying buckets {{model.bucketList.firstItemIndex}}-{{model.bucketList.lastItemIndex}} out--}}
+                      {{!--of {{model.bucketList.total}}</p>--}}
+                  {{!--{{else}}--}}
+                    {{!--<p>Displaying bucket {{model.bucketList.firstItemIndex}} out of {{model.bucketList.total}}</p>--}}
+                  {{!--{{/if}}--}}
+
+                  {{!--<ul class='button-list'>--}}
+                    {{!--{{#each model.buckets as |bucket|}}--}}
+                      {{!--<li>{{link.link-bucket bucket=bucket}}</li>--}}
+                    {{!--{{/each}}--}}
+                  {{!--</ul>--}}
+                {{!--{{#pagination-component--}}
+                {{!--chunkSize=model.bucketList.pageSize--}}
+                {{!--totalSize=model.bucketList.total--}}
+                {{!--sectionRequest='retrieveRequestedBuckets'}}--}}
+                {{!--{{/pagination-component}}--}}
+                {{!--{{else}}--}}
+                  {{!--No buckets found--}}
+                {{!--{{/if}}--}}
+              {{!--</td>--}}
+            {{!--</tr>--}}
+            {{!--</tbody>--}}
+          {{!--</table>--}}
+        {{!--{{else}}--}}
+          {{!--<p>Cached bucket list not available.</p>--}}
+          {{!--<p>This cluster is in Production mode, and so no cache refresh is possible.</p>--}}
+        {{!--{{/if}}--}}
+      {{!--{{else}}--}}
+        {{!--{{loading-spinner statusMessage=model.statusMessage}}--}}
+      {{!--{{/if}}--}}
+    {{/dashboard-module.body}}
+  {{/dashboard-module.container}}
+</div>
