--- a/app/templates/components/table/bucket-types.hbs
+++ b/app/templates/components/table/bucket-types.hbs
@@ -1,9 +1,10 @@
 <thead>
 <tr>
-  <th>Name</th>
-  <th>Object Type</th>
-  <th>n_val</th>
-  <th>Conflict Res. Strategy</th>
+  <th class="name">Name</th>
+  <th class="riak-type">Riak Type</th>
+  <th class="object-type">Object Type</th>
+  <th class="n-val">n_val</th>
+  <th class="res-stategy">Conflict Res. Strategy</th>
 </tr>
 </thead>
 <tbody>
@@ -11,6 +12,9 @@
   <tr>
     <td>
       {{link.bucket-type bucketType=bt btnBlock=true}}
+    </td>
+    <td>
+      {{bt.dataStoreType}}
     </td>
     <td>
       {{bt.objectType}}
