--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -25,7 +25,7 @@
                 <li>{{currentCluster.riakVersion}}</li>
               {{/if}}
               {{#if currentCluster.hasType}}
-                <li>{{currentCluster.riakType}}</li>
+                <li>{{currentCluster.riakTypeLong}}</li>
               {{/if}}
               {{#if currentCluster.developmentMode}}
                 <li class='dev-mode'>Dev mode</li>
