Basic support for writing data to a Table

--- a/app/styles/components/_alerts.scss
+++ b/app/styles/components/_alerts.scss
@@ -3,6 +3,11 @@
     border-radius: 0;
     padding-left: 40px;
     padding-right: 20px;
+    margin-bottom: 0;
+
+    &:last-of-type {
+      margin-bottom: 20px;
+    }
   }
 }
 
