Basic Table Query Support

--- a/app/templates/bucket-type/time-series.hbs
+++ b/app/templates/bucket-type/time-series.hbs
@@ -51,6 +51,11 @@
         {{form.bucket-type.add-rows
           bucketType=model}}
       </section>
+
+      <section>
+        {{form.bucket-type.query-table
+          bucketType=model}}
+      </section>
     {{/dashboard-module.body}}
   {{/dashboard-module.container}}
 </div>
