--- a/app/templates/components/breadcrumb-component.hbs
+++ b/app/templates/components/breadcrumb-component.hbs
@@ -10,25 +10,29 @@
         data.cluster.name
         data.bucketType.name}}
       </li>
+
+      {{#if data.bucket}}
+        <li>
+          {{link-to data.bucket.name 'bucket'
+          data.cluster.name
+          data.bucketType.name
+          data.bucket.name}}
+        </li>
+      {{/if}}
+
+      {{#if data.riakObject}}
+        <li>
+          {{link-to data.riakObject.name 'riak-object'
+          data.cluster.name
+          data.bucketType.name
+          data.bucket.name
+          data.riakObject.name}}
+        </li>
+      {{/if}}
     {{/if}}
 
-    {{#if data.bucket}}
-      <li>
-        {{link-to data.bucket.name 'bucket'
-        data.cluster.name
-        data.bucketType.name
-        data.bucket.name}}
-      </li>
-    {{/if}}
-
-    {{#if data.riakObject}}
-      <li>
-        {{link-to data.riakObject.name 'riak-object'
-        data.cluster.name
-        data.bucketType.name
-        data.bucket.name
-        data.riakObject.name}}
-      </li>
+    {{#if data.tableCreate}}
+      <li>create table</li>
     {{/if}}
 
     {{#if data.bucketTypeCreate}}
