--- a/app/styles/utils/_bootstrap-overrides.scss
+++ b/app/styles/utils/_bootstrap-overrides.scss
@@ -54,6 +54,18 @@ code {
   background-color: lighten($branding-color-1, 48%);
   color: darken($branding-color-1, 2%);
   word-break: break-word;
+
+  &.comma-list {
+    .item {
+      &:after {
+        content: ", ";
+      }
+
+      &:last-child:after {
+        content: "";
+      }
+    }
+  }
 }
 
 pre {
