--- a/app/templates/components/form/table/create-table.hbs
+++ b/app/templates/components/form/table/create-table.hbs
@@ -1,13 +1,3 @@
-{{#bs-alert type="info"}}
-  <h4><span class="label label-info">Notes on Table Creation</span></h4>
-  <ul>
-    <li>If field names need to contain spaces they can be double quoted.</li>
-    <li>Quantum field name must be an existing field in the table definition of type <strong>timestamp</strong></li>
-    <li>For more information on planning and creating a time series table, visit the <a href="http://docs.basho.com/riak/ts/1.2.0/using/planning/" target="_blank">Basho Docs</a>.</li>
-  </ul>
-{{/bs-alert}}
-
-
 <div class="form-group table-name">
   <label>Table Name</label>
   {{input
@@ -16,7 +6,7 @@
 </div>
 
 <div class="form-group family">
-  <label>Family (name, type)</label>
+  <label>Partition Key Field One (name, type)</label>
 
   <div class="form-inline">
     <div class="form-group">
@@ -37,7 +27,7 @@
 </div>
 
 <div class="form-group series">
-  <label>Series (name, type)</label>
+  <label>Partition Key Field Two (name, type)</label>
 
   <div class="form-inline">
     <div class="form-group">
