--- a/app/templates/components/table/ts-tables.hbs
+++ b/app/templates/components/table/ts-tables.hbs
@@ -2,7 +2,7 @@
 <tr>
   <th class="name">Name</th>
   <th class="n-val">n_val</th>
-  <th class="res-stategy">Conflict Res. Strategy</th>
+  <th class="partition-key">Partition Key</th>
 </tr>
 </thead>
 <tbody>
@@ -17,7 +17,7 @@
       <code>{{table.nVal}}</code>
     </td>
     <td>
-      <code>{{table.resolutionStrategy}}</code>
+      <code>[{{table.partitionKey}}]</code>
     </td>
   </tr>
 {{/each}}
