--- a/app/templates/components/table/bucket-props-advanced.hbs
+++ b/app/templates/components/table/bucket-props-advanced.hbs
@@ -9,6 +9,14 @@
       itemIsEditable=prop.editable
       itemSchemaType=prop.json_schema_type}}
     </td>
-    <td class='value'><code>{{prop.value}}</code></td>
+    <td class='value'>
+      <code>
+        {{#if (is-array prop.value)}}
+          [{{prop.value}}]
+        {{else}}
+          {{prop.value}}
+        {{/if}}
+      </code>
+    </td>
   </tr>
 {{/each}}
