--- a/app/styles/utils/_bootstrap-overrides.scss
+++ b/app/styles/utils/_bootstrap-overrides.scss
@@ -29,6 +29,7 @@
         padding: 10px 15px;
         vertical-align: middle;
         text-align: left;
+        border-top: 1px solid rgba(221, 221, 221, 0.2);
       }
     }
   }
