Update code highlighter component. Integrate into TS query results.

--- a/app/styles/utils/_bootstrap-overrides.scss
+++ b/app/styles/utils/_bootstrap-overrides.scss
@@ -73,6 +73,11 @@ pre {
   background: #2b2b2b;
   border-color: #2b2b2b;
   color: #bababa;
+  white-space: pre-wrap;       /* CSS 3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 @media only screen and (max-width: 768px) {
