--- a/app/styles/utils/_base.scss
+++ b/app/styles/utils/_base.scss
@@ -15,6 +15,10 @@ section {
     margin-bottom: 10px;
     display: inline-block;
   }
+
+  &.form-section {
+    margin-bottom: 40px;
+  }
 }
 
 ul {
