Manual creation of table creation through codemirror editor

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,42 +1,43 @@
 // Vendor
 @import "../../vendor/bootstrap-sass/stylesheets/bootstrap";
 @import "ember-power-select";
-// Utils
+// Utils (order matters on how these are declared)
 @import "utils/variables";
 @import "utils/mixins";
-@import "utils/bootstrap-overrides";
 @import "utils/base";
+@import "utils/bootstrap-overrides";
 // Layout
 @import "layout/app-panel";
+@import "layout/results-panel";
+@import "layout/sidebar-panel";
 @import "layout/topbar-panel";
 @import "layout/wrapper-panel";
-@import "layout/sidebar-panel";
-@import "layout/results-panel";
 // Generic Components
-@import "components/riak-object-styling";
-@import "components/dashboard-module";
+@import "components/action-buttons";
+@import "components/alerts";
 @import "components/breadcrumb-component";
-@import "components/loading-spinner";
-@import "components/loading-slider";
-@import "components/view-label";
-@import "components/ivy-tabs";
-@import "components/key-value-table";
 @import "components/button-list";
 @import "components/cluster-resource-link";
-@import "components/pagination-component";
-@import "components/action-buttons";
-@import "components/code-highlighter";
-@import "components/content-editable";
-@import "components/code-list";
 @import "components/cluster-status";
+@import "components/code-highlighter";
+@import "components/code-list";
+@import "components/code-mirror";
+@import "components/content-editable";
+@import "components/dashboard-module";
+@import "components/ember-power-select";
+@import "components/ivy-tabs";
+@import "components/key-value-table";
+@import "components/loading-slider";
+@import "components/loading-spinner";
 @import "components/map-section";
 @import "components/object-content-list";
-@import "components/alerts";
-@import "components/tooltip";
-@import "components/ember-power-select";
+@import "components/pagination-component";
+@import "components/riak-object-styling";
 @import "components/table";
+@import "components/tooltip";
+@import "components/view-label";
 // View specific styling
-@import "views/cluster";
 @import "views/bucket-type";
+@import "views/cluster";
 @import "views/riak-object";
 @import "views/table";
